--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.holotest"
+    package="com.sutil.rango"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -15,7 +15,8 @@
         android:theme="@style/Holo.Theme.Light.DarkActionBar">
         <activity
             android:name="com.sutil.rango.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:theme="@style/Holo.Theme.Light.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
