--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,6 +8,12 @@
         android:minSdkVersion="8"
         android:targetSdkVersion="16" />
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+
+    <uses-feature android:name="android.hardware.wifi" android:required="true" />
+    <uses-feature android:name="android.hardware.microphone" android:required="true" />
 
     <application 
         android:icon="@drawable/ic_launcher"
