--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -30,6 +30,7 @@
             </intent-filter>
         </activity>
         <activity android:name="com.sutil.rango.TabsActivity"></activity>
+        <activity android:name="com.sutil.rango.WalkieTalkieActivity"></activity>
         
         <meta-data android:value="@string/app_id" android:name="com.facebook.sdk.ApplicationId"/>
         <activity android:name="com.facebook.LoginActivity"></activity>
