--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -40,7 +40,11 @@
             </intent-filter>
         </activity>
         <activity android:name="com.sutil.rango.TabsActivity"></activity>
-        <activity android:name="com.sutil.rango.WalkieTalkieActivity"></activity>
+        <activity android:name="com.sutil.rango.WalkieTalkieActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.sutil.rango.TabsActivity"/>
+        </activity>
         
         <meta-data android:value="@string/app_id" android:name="com.facebook.sdk.ApplicationId"/>
         <activity android:name="com.facebook.LoginActivity"></activity>
