--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -32,7 +32,8 @@
         <activity
             android:name="com.sutil.rango.MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/Holo.Theme.Light.NoActionBar">
+            android:theme="@style/Holo.Theme.Light.NoActionBar"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
