--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -29,6 +29,7 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/Holo.Theme.Light.DarkActionBar">
+        
         <activity
             android:name="com.sutil.rango.MainActivity"
             android:label="@string/app_name"
@@ -41,6 +42,14 @@
             </intent-filter>
         </activity>
         <activity android:name="com.sutil.rango.TabsActivity"></activity>
+        
+        <activity 
+            android:name="com.sutil.rango.RequestsListActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.sutil.rango.TabsActivity"/>
+        </activity>
+        
         <activity 
             android:name="com.sutil.rango.WalkieTalkieActivity"
             android:screenOrientation="portrait">
