--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -69,7 +69,7 @@
 		    <category android:name="com.sutil.rango" />
 		  </intent-filter>
 		</receiver>
-		<service android:name=".GCMIntentService" />
+		<service android:name="com.sutil.rango.services.GCMIntentService" />
     </application>
 
 </manifest>
